--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@supabase/supabase-js": "^2.21.0",
     "bootstrap": "^5.3.0-alpha3",
     "jquery": "^3.6.4",
     "popper.js": "^1.16.1",
