--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@supabase/supabase-js": "^2.21.0",
     "bootstrap": "^5.3.0-alpha3",
+    "bootstrap-icons": "^1.10.5",
     "jquery": "^3.6.4",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
